--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "astro": "^5.7.5",
+    "astro-i18n": "^2.2.4",
     "astro-particles": "^2.10.0",
+    "i18n": "^0.15.1",
+    "i18next": "^25.1.2",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.1",
     "tailwindcss": "^4.1.4",
     "tsparticles": "^3.8.1",
     "tsparticles-slim": "^2.12.0"
